src/FireWrapper/wrapper.h

typedef struct ImVec4 ImVec4;
typedef struct ImVec2 ImVec2;
typedef struct ImFontGlyph ImFontGlyph;
typedef struct ImFontConfig ImFontConfig;
typedef struct ImFontAtlas ImFontAtlas;
typedef struct ImFont ImFont;
typedef struct ImDrawVert ImDrawVert;
typedef struct ImDrawListSplitter ImDrawListSplitter;
typedef struct ImDrawListSharedData ImDrawListSharedData;
typedef struct ImDrawList ImDrawList;
typedef struct ImDrawCmd ImDrawCmd;
struct ImDrawCmd;
struct ImDrawList;
struct ImDrawListSharedData;
struct ImDrawListSplitter;
struct ImDrawVert;
struct ImFont;
struct ImFontAtlas;
struct ImFontConfig;
struct ImFontGlyph;
typedef int ImDrawCornerFlags;
typedef int ImDrawListFlags;
typedef void* ImTextureID;
typedef ImWchar16 ImWchar;
typedef unsigned char ImU8;
typedef unsigned int ImU32;
typedef void(*ImDrawCallback)(const ImDrawList* parent_list, const ImDrawCmd* cmd);
typedef unsigned short ImDrawIdx;
struct ImDrawListSharedData;
typedef struct ImVector_float { int Size; int Capacity; float* Data; } ImVector_float;
typedef struct ImVector_ImWchar { int Size; int Capacity; ImWchar* Data; } ImVector_ImWchar;
typedef struct ImVector_ImDrawVert { int Size; int Capacity; ImDrawVert* Data; } ImVector_ImDrawVert;
typedef struct ImVector_ImVec4 { int Size; int Capacity; ImVec4* Data; } ImVector_ImVec4;
typedef struct ImVector_ImFontGlyph { int Size; int Capacity; ImFontGlyph* Data; } ImVector_ImFontGlyph;
typedef struct ImVector_ImDrawChannel { int Size; int Capacity; ImDrawChannel* Data; } ImVector_ImDrawChannel;
typedef struct ImVector_ImTextureID { int Size; int Capacity; ImTextureID* Data; } ImVector_ImTextureID;
typedef struct ImVector_ImVec2 { int Size; int Capacity; ImVec2* Data; } ImVector_ImVec2;
typedef struct ImVector_ImDrawCmd { int Size; int Capacity; ImDrawCmd* Data; } ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx { int Size; int Capacity; ImDrawIdx* Data; } ImVector_ImDrawIdx;
struct ImVec2
{
	float x, y;
};
struct ImVec4
{
	float x, y, z, w;
};
struct ImDrawCmd
{
	ImVec4 ClipRect;
	ImTextureID TextureId;
	unsigned int VtxOffset;
	unsigned int IdxOffset;
	unsigned int ElemCount;
	ImDrawCallback UserCallback;
	void* UserCallbackData;
};
struct ImDrawVert
{
	ImVec2 pos;
	ImVec2 uv;
	ImU32 col;
};
struct ImDrawListSplitter
{
	int _Current;
	int _Count;
	ImVector_ImDrawChannel _Channels;
};
struct ImDrawList
{
	ImVector_ImDrawCmd CmdBuffer;
	ImVector_ImDrawIdx IdxBuffer;
	ImVector_ImDrawVert VtxBuffer;
	ImDrawListFlags Flags;
	const ImDrawListSharedData* _Data;
	const char* _OwnerName;
	unsigned int _VtxCurrentIdx;
	ImDrawVert* _VtxWritePtr;
	ImDrawIdx* _IdxWritePtr;
	ImVector_ImVec4 _ClipRectStack;
	ImVector_ImTextureID _TextureIdStack;
	ImVector_ImVec2 _Path;
	ImDrawCmd _CmdHeader;
	ImDrawListSplitter _Splitter;
};
struct ImFontConfig
{
	void* FontData;
	int FontDataSize;
	bool FontDataOwnedByAtlas;
	int FontNo;
	float SizePixels;
	int OversampleH;
	int OversampleV;
	bool PixelSnapH;
	ImVec2 GlyphExtraSpacing;
	ImVec2 GlyphOffset;
	const ImWchar* GlyphRanges;
	float GlyphMinAdvanceX;
	float GlyphMaxAdvanceX;
	bool MergeMode;
	unsigned int RasterizerFlags;
	float RasterizerMultiply;
	ImWchar EllipsisChar;
	char Name[40];
	ImFont* DstFont;
};
struct ImFontGlyph
{
	unsigned int Codepoint : 31;
	unsigned int Visible : 1;
	float AdvanceX;
	float X0, Y0, X1, Y1;
	float U0, V0, U1, V1;
};
struct ImFontAtlas
{
	bool Locked;
	ImFontAtlasFlags Flags;
	ImTextureID TexID;
	int TexDesiredWidth;
	int TexGlyphPadding;
	unsigned char* TexPixelsAlpha8;
	unsigned int* TexPixelsRGBA32;
	int TexWidth;
	int TexHeight;
	ImVec2 TexUvScale;
	ImVec2 TexUvWhitePixel;
	ImVector_ImFontPtr Fonts;
	ImVector_ImFontAtlasCustomRect CustomRects;
	ImVector_ImFontConfig ConfigData;
	int CustomRectIds[1];
};
struct ImFont
{
	ImVector_float IndexAdvanceX;
	float FallbackAdvanceX;
	float FontSize;
	ImVector_ImWchar IndexLookup;
	ImVector_ImFontGlyph Glyphs;
	const ImFontGlyph* FallbackGlyph;
	ImVec2 DisplayOffset;
	ImFontAtlas* ContainerAtlas;
	const ImFontConfig* ConfigData;
	short ConfigDataCount;
	ImWchar FallbackChar;
	ImWchar EllipsisChar;
	bool DirtyLookupTables;
	float Scale;
	float Ascent, Descent;
	int MetricsTotalSurface;
	ImU8 Used4kPagesMap[(0xFFFF + 1) / 4096 / 8];
};
struct ImDrawListSharedData
{
	ImVec2 TexUvWhitePixel;
	ImFont* Font;
	float FontSize;
	float CurveTessellationTol;
	float CircleSegmentMaxError;
	ImVec4 ClipRectFullscreen;
	ImDrawListFlags InitialFlags;
	ImVec2 ArcFastVtx[12 * 1];
	ImU8 CircleSegmentCounts[64];
};
typedef enum {
	ImGuiPlotType_Lines,
	ImGuiPlotType_Histogram
}ImGuiPlotType;
typedef ImVector<float> ImVector_float;
typedef ImVector<ImWchar> ImVector_ImWchar;
typedef ImVector<ImDrawVert> ImVector_ImDrawVert;
typedef ImVector<ImVec4> ImVector_ImVec4;
typedef ImVector<ImFontGlyph> ImVector_ImFontGlyph;
typedef ImVector<ImDrawChannel> ImVector_ImDrawChannel;
typedef ImVector<ImTextureID> ImVector_ImTextureID;
typedef ImVector<ImVec2> ImVector_ImVec2;
typedef ImVector<ImDrawCmd> ImVector_ImDrawCmd;
typedef ImVector<ImDrawIdx> ImVector_ImDrawIdx;
CIMGUI_API void igPlotLinesFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igPlotHistogramFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igSetAllocatorFunctions(void*(*alloc_func)(size_t sz, void* user_data), void(*free_func)(void* ptr, void* user_data), void* user_data);
CIMGUI_API void ImDrawListSplitter_destroy(ImDrawListSplitter* self);
CIMGUI_API void ImDrawListSplitter_Clear(ImDrawListSplitter* self);
CIMGUI_API void ImDrawListSplitter_ClearFreeMemory(ImDrawListSplitter* self);
CIMGUI_API ImDrawList* ImDrawList_ImDrawList(const ImDrawListSharedData* shared_data);
CIMGUI_API void ImDrawList_destroy(ImDrawList* self);
CIMGUI_API void ImDrawList_PushClipRect(ImDrawList* self, ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);
CIMGUI_API void ImDrawList_PushClipRectFullScreen(ImDrawList* self);
CIMGUI_API void ImDrawList_PopClipRect(ImDrawList* self);
CIMGUI_API void ImDrawList_PushTextureID(ImDrawList* self, ImTextureID texture_id);
CIMGUI_API void ImDrawList_PopTextureID(ImDrawList* self);
CIMGUI_API void ImDrawList_GetClipRectMin(ImVec2 *pOut, ImDrawList* self);
CIMGUI_API void ImDrawList_GetClipRectMax(ImVec2 *pOut, ImDrawList* self);
CIMGUI_API void ImDrawList_AddLine(ImDrawList* self, const ImVec2 p1, const ImVec2 p2, ImU32 col, float thickness);
CIMGUI_API void ImDrawList_AddRect(ImDrawList* self, const ImVec2 p_min, const ImVec2 p_max, ImU32 col, float rounding, ImDrawCornerFlags rounding_corners, float thickness);
CIMGUI_API void ImDrawList_AddRectFilled(ImDrawList* self, const ImVec2 p_min, const ImVec2 p_max, ImU32 col, float rounding, ImDrawCornerFlags rounding_corners);
CIMGUI_API void ImDrawList_AddRectFilledMultiColor(ImDrawList* self, const ImVec2 p_min, const ImVec2 p_max, ImU32 col_upr_left, ImU32 col_upr_right, ImU32 col_bot_right, ImU32 col_bot_left);
CIMGUI_API void ImDrawList_AddQuad(ImDrawList* self, const ImVec2 p1, const ImVec2 p2, const ImVec2 p3, const ImVec2 p4, ImU32 col, float thickness);
CIMGUI_API void ImDrawList_AddQuadFilled(ImDrawList* self, const ImVec2 p1, const ImVec2 p2, const ImVec2 p3, const ImVec2 p4, ImU32 col);
CIMGUI_API void ImDrawList_AddTriangle(ImDrawList* self, const ImVec2 p1, const ImVec2 p2, const ImVec2 p3, ImU32 col, float thickness);
CIMGUI_API void ImDrawList_AddTriangleFilled(ImDrawList* self, const ImVec2 p1, const ImVec2 p2, const ImVec2 p3, ImU32 col);
CIMGUI_API void ImDrawList_AddCircle(ImDrawList* self, const ImVec2 center, float radius, ImU32 col, int num_segments, float thickness);
CIMGUI_API void ImDrawList_AddCircleFilled(ImDrawList* self, const ImVec2 center, float radius, ImU32 col, int num_segments);
CIMGUI_API void ImDrawList_AddNgon(ImDrawList* self, const ImVec2 center, float radius, ImU32 col, int num_segments, float thickness);
CIMGUI_API void ImDrawList_AddNgonFilled(ImDrawList* self, const ImVec2 center, float radius, ImU32 col, int num_segments);
CIMGUI_API void ImDrawList_AddTextFontPtr(ImDrawList* self, const ImFont* font, float font_size, const ImVec2 pos, ImU32 col, const char* text_begin, const char* text_end, float wrap_width, const ImVec4* cpu_fine_clip_rect);
CIMGUI_API void ImDrawList_AddPolyline(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col, bool closed, float thickness);
CIMGUI_API void ImDrawList_AddConvexPolyFilled(ImDrawList* self, const ImVec2* points, int num_points, ImU32 col);
CIMGUI_API void ImDrawList_AddBezierCurve(ImDrawList* self, const ImVec2 p1, const ImVec2 p2, const ImVec2 p3, const ImVec2 p4, ImU32 col, float thickness, int num_segments);
CIMGUI_API void ImDrawList_AddImage(ImDrawList* self, ImTextureID user_texture_id, const ImVec2 p_min, const ImVec2 p_max, const ImVec2 uv_min, const ImVec2 uv_max, ImU32 col);
CIMGUI_API void ImDrawList_AddImageQuad(ImDrawList* self, ImTextureID user_texture_id, const ImVec2 p1, const ImVec2 p2, const ImVec2 p3, const ImVec2 p4, const ImVec2 uv1, const ImVec2 uv2, const ImVec2 uv3, const ImVec2 uv4, ImU32 col);
CIMGUI_API void ImDrawList_AddImageRounded(ImDrawList* self, ImTextureID user_texture_id, const ImVec2 p_min, const ImVec2 p_max, const ImVec2 uv_min, const ImVec2 uv_max, ImU32 col, float rounding, ImDrawCornerFlags rounding_corners);
CIMGUI_API void ImDrawList_PathClear(ImDrawList* self);
CIMGUI_API void ImDrawList_PathLineTo(ImDrawList* self, const ImVec2 pos);
CIMGUI_API void ImDrawList_PathLineToMergeDuplicate(ImDrawList* self, const ImVec2 pos);
CIMGUI_API void ImDrawList_PathFillConvex(ImDrawList* self, ImU32 col);
CIMGUI_API void ImDrawList_PathStroke(ImDrawList* self, ImU32 col, bool closed, float thickness);
CIMGUI_API void ImDrawList_PathArcTo(ImDrawList* self, const ImVec2 center, float radius, float a_min, float a_max, int num_segments);
CIMGUI_API void ImDrawList_PathArcToFast(ImDrawList* self, const ImVec2 center, float radius, int a_min_of_12, int a_max_of_12);
CIMGUI_API void ImDrawList_PathBezierCurveTo(ImDrawList* self, const ImVec2 p2, const ImVec2 p3, const ImVec2 p4, int num_segments);
CIMGUI_API void ImDrawList_PathRect(ImDrawList* self, const ImVec2 rect_min, const ImVec2 rect_max, float rounding, ImDrawCornerFlags rounding_corners);
CIMGUI_API void ImDrawList_AddCallback(ImDrawList* self, ImDrawCallback callback, void* callback_data);
CIMGUI_API void ImDrawList_AddDrawCmd(ImDrawList* self);
CIMGUI_API ImDrawList* ImDrawList_CloneOutput(ImDrawList* self);
CIMGUI_API void ImDrawList_ChannelsSplit(ImDrawList* self, int count);
CIMGUI_API void ImDrawList_ChannelsMerge(ImDrawList* self);
CIMGUI_API void ImDrawList_ChannelsSetCurrent(ImDrawList* self, int n);
CIMGUI_API void ImDrawList_PrimReserve(ImDrawList* self, int idx_count, int vtx_count);
CIMGUI_API void ImDrawList_PrimUnreserve(ImDrawList* self, int idx_count, int vtx_count);
CIMGUI_API void ImDrawList_PrimRect(ImDrawList* self, const ImVec2 a, const ImVec2 b, ImU32 col);
CIMGUI_API void ImDrawList_PrimRectUV(ImDrawList* self, const ImVec2 a, const ImVec2 b, const ImVec2 uv_a, const ImVec2 uv_b, ImU32 col);
CIMGUI_API void ImDrawList_PrimQuadUV(ImDrawList* self, const ImVec2 a, const ImVec2 b, const ImVec2 c, const ImVec2 d, const ImVec2 uv_a, const ImVec2 uv_b, const ImVec2 uv_c, const ImVec2 uv_d, ImU32 col);
CIMGUI_API void ImDrawList_PrimWriteVtx(ImDrawList* self, const ImVec2 pos, const ImVec2 uv, ImU32 col);
CIMGUI_API void ImDrawList_PrimWriteIdx(ImDrawList* self, ImDrawIdx idx);
CIMGUI_API void ImDrawList_PrimVtx(ImDrawList* self, const ImVec2 pos, const ImVec2 uv, ImU32 col);
CIMGUI_API int igPlotEx(ImGuiPlotType plot_type, const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 frame_size);